objects/ssot__InPersonMeeting__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AppointmentDate__c</fullName>
        <label>Appointment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__AppointmentEndTime__c</fullName>
        <label>Appointment End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AppointmentStartTime__c</fullName>
        <label>Appointment Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>In Person Engagement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InPersonMeeting_VisitId_map_Visit_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InPersonMeeting_VisitId_map_Visit_Id_N_1</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>InPersonMeeting_VisitId_map_Visit_Id_N_1</relationshipLabel>
        <relationshipName>InPersonMeeting_VisitId_map_Visit_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationID__c</fullName>
        <label>Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MobileStoreId__c</fullName>
        <label>Mobile Store</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetailStoreId__c</fullName>
        <label>Retail Store</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesRepId__c</fullName>
        <label>Sales Representative</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesStoreId__c</fullName>
        <label>Sales Store</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusRemarksText__c</fullName>
        <label>Status Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitId__c</fullName>
        <label>Visit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreId__c</fullName>
        <label>Web Store</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818367708_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InPersonMeeting_SalesRepId_map_User__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>InPersonMeeting_SalesRepId_map_User__rel</relationshipLabel>
        <relationshipName>rel_1719818367708_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819733755_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InPersonMeeting_ChannelEngagementId__rel</label>
        <referenceTo>ssot__ChannelEngagement__dlm</referenceTo>
        <relationshipLabel>InPersonMeeting_ChannelEngagementId__rel</relationshipLabel>
        <relationshipName>rel_1719819733755_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128549217_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InPersonMeeting_LocationID_map_Locat_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>InPersonMeeting_LocationID_map_Locat_rel</relationshipLabel>
        <relationshipName>rel_1723128549217_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>